force-app/main/default/objects/PropertyAmenitiy__c/PropertyAmenitiy__c.object-meta.xml
<CustomObject>
    <label>Amenity</label>
    <nameField>
        <displayFormat>AM-{00000}</displayFormat>
        <label>Amenitiy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amenities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>