force-app/main/default/objects/PropertyAmenitiy__c/fields/Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cost__c</fullName>
    <label>Monthly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>