force-app/main/default/objects/PropertyAmenitiy__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>200</length>
    <type>Text</type>
</CustomField>