force-app/main/default/objects/PropertyAmenitiy__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Bike Storage</fullName>
            </value>
            <value>
                <fullName>Daycare</fullName>
            </value>
            <value>
                <fullName>Fitness Center</fullName>
            </value>
            <value>
                <fullName>Game Room</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Party Room</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Storage Locker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>